--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <!-- Div dans laquelle apparaitra la carte -->
         <div id="map"></div>
 
+        <!-- Credits for icon -->
+        <p>poo by Cameron Arksey from <a href="https://thenounproject.com/browse/icons/term/poo/" target="_blank" title="poo Icons">Noun Project</a> (CC BY 3.0)</p>
+
         <!-- Inclusion du fichier de script contenant les données -->
         <script type="text/javascript" src="DATA/data.js"></script>
         <!-- Inclusion du fichier de script -->
